feat: implement shared session manager for WhatsApp RPA scripts

--- a/data/whatsapp_media_ocr_results.json
+++ b/data/whatsapp_media_ocr_results.json
@@ -1,7 +1,13 @@
 {
-  "timestamp": "2025-07-25T16:19:35.585851",
-  "error": "로그인에 실패했습니다. QR 코드를 스캔해주세요.",
-  "total_processed": 0,
-  "successful": 0,
-  "results": []
+  "timestamp": "2025-07-25T19:55:05.424268+00:00",
+  "total_processed": 1,
+  "successful": 1,
+  "results": [
+    {
+      "text": "коу\n김국일 kukil.kim@samsung.com>\nREFERE[결재동보] [UAE, HVDC] ALS(37) 운송하역비\n집행의 수\n받는 사람 karyong@amangcom\njeongsamsung.com: Adnan Ojintakan: Wolden Mendoza\n2. Invoice (924075A20\n안녕하세요 남기\n해당 구분은 AI가 맞습니다.\n휴먼에러(Typoj확인되어 보이스는 수정요청할 예정이며, 수정본은 Adan\n에게 전달드리겠습니다.\n안녕하세요 차민규 프로\n첨부된 Invoice (37294075 확인해주시고 ALS에 인보이스 수정요청을\n진행해주시길 부탁드립니다.\n감사합니다.\n김일드림\nBrods\n김국일 Kuk Kim (Roy)\nDM Project Lightning (HVDCL\nOffice +971 2094 0500\nMobile\n971565487015\nCreating\n삼성물산\nFutureScape\nHO",
+      "confidence": 0.95,
+      "engine": "gcv",
+      "file_path": "downloads\\whatsapp_media_20250725_195502.jpg"
+    }
+  ]
 }
