--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,7 @@ aiohttp>=3.8.0
 python-dotenv>=1.0.0
 click>=8.1.7
 typer>=0.9.0
+apify-client>=1.4.0
 
 # Security and Authentication
 cryptography>=41.0.0
