fix: Update Baileys version and fix TypeScript compilation
- Update @whiskeysockets/baileys from ^7.0.0 to ^6.7.20 (stable version)
- Fix TypeScript compilation error in messageTimestamp handling
- Add apify_actor/node_modules/ and dist/ to .gitignore
- Update package.json build script to use npx tsc

This ensures the Apify Actor builds successfully with the stable
Baileys version and proper TypeScript compilation.

--- a/.gitignore
+++ b/.gitignore
@@ -128,6 +128,13 @@ react_frontend/npm-debug.log*
 react_frontend/yarn-debug.log*
 react_frontend/yarn-error.log*
 
+# Node.js (Apify Actor)
+apify_actor/node_modules/
+apify_actor/dist/
+apify_actor/npm-debug.log*
+apify_actor/yarn-debug.log*
+apify_actor/yarn-error.log*
+
 # Build outputs
 react_frontend/build/
 react_frontend/dist/
