--- a/package.json
+++ b/package.json
@@ -3,17 +3,17 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "build": "npx tsc -p .",
+        "build": "tsc -p .",
         "start": "node dist/index.js"
     },
     "dependencies": {
         "@apify/timeout": "^0.3.0",
-        "apify": "^3.1.8",
         "@whiskeysockets/baileys": "^6.7.20",
+        "apify": "^3.1.8",
         "pino": "^9.0.0",
         "undici": "^6.19.8"
     },
     "devDependencies": {
-        "typescript": "^5.6.3"
+        "typescript": "^5.9.3"
     }
 }
