--- a/.gitignore
+++ b/.gitignore
@@ -122,6 +122,13 @@ Thumbs.db
 *.swp
 *.swo
 
+# Node.js (Root)
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+package-lock.json
+
 # Node.js (React Frontend)
 react_frontend/node_modules/
 react_frontend/npm-debug.log*
