--- a/apify_actor/package.json
+++ b/apify_actor/package.json
@@ -3,7 +3,7 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "build": "npx tsc -p .",
+        "build": "tsc -p .",
         "start": "node dist/index.js"
     },
     "dependencies": {
