Add whatsapp.ts with latest Baileys QR display logic and qrcode dependency

--- a/apify_actor/package.json
+++ b/apify_actor/package.json
@@ -11,7 +11,8 @@
         "apify": "^3.1.8",
         "@whiskeysockets/baileys": "^6.7.20",
         "pino": "^9.0.0",
-        "undici": "^6.19.8"
+        "undici": "^6.19.8",
+        "qrcode": "^1.5.4"
     },
     "devDependencies": {
         "typescript": "^5.6.3"
