--- a/apify_actor/package.json
+++ b/apify_actor/package.json
@@ -15,6 +15,7 @@
         "qrcode": "^1.5.4"
     },
     "devDependencies": {
+        "@types/qrcode": "^1.5.5",
         "typescript": "^5.6.3"
     }
 }
